--- a/src/components/Participants/Participants.module.css
+++ b/src/components/Participants/Participants.module.css
@@ -1,14 +1,21 @@
 .wrapper {
   width: 100%;
   height: 90vh;
+  display: flex;
+  gap: 1rem;
+  padding: 1rem;
+  background-color: #202124;
 }
 
 .participants {
-  padding: 1rem;
   width: 100%;
   height: 100%;
-  background-color: #202124;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 0.5rem;
+}
+
+.modal {
+  width: 400px;
+  background-color: #fff;
 }
