--- a/src/components/Participants/Participant.module.css
+++ b/src/components/Participants/Participant.module.css
@@ -29,3 +29,18 @@
   left: 10px;
   bottom: 10px;
 }
+
+@media screen and (max-width: 700px) {
+  .avatar {
+    width: 60px;
+    height: 60px;
+  }
+
+  .avatar h1 {
+    font-size: 1.5rem;
+  }
+
+  .name {
+    font-size: 0.8rem;
+  }
+}
