--- a/src/components/Participants/Participants.module.css
+++ b/src/components/Participants/Participants.module.css
@@ -19,3 +19,13 @@
   width: 400px;
   background-color: #fff;
 }
+
+@media screen and (max-width: 700px) {
+  .wrapper {
+    height: 85vh;
+  }
+
+  .participants {
+    grid-template-columns: 1fr 1fr;
+  }
+}
