--- a/src/components/Sidebar/MessageBox.module.css
+++ b/src/components/Sidebar/MessageBox.module.css
@@ -64,3 +64,12 @@
   top: 4px;
   right: 10px;
 }
+
+@media screen and (max-width: 700px) {
+  .box {
+    position: absolute;
+    right: 0px;
+    width: 80%;
+    height: 80vh;
+  }
+}
