--- a/src/components/Sidebar/ParticipantsBox.module.css
+++ b/src/components/Sidebar/ParticipantsBox.module.css
@@ -3,6 +3,7 @@
   background-color: #fff;
   border-radius: 8px;
   padding: 1rem;
+  overflow: auto;
 }
 
 .heading {
@@ -60,4 +61,13 @@
 .avatar h1 {
   font-size: 2.5rem;
   font-weight: 500;
+}
+
+@media screen and (max-width: 700px) {
+  .box {
+    position: absolute;
+    right: 0px;
+    width: 80%;
+    height: 80vh;
+  }
 }
